fix: make contact not hidden under backdrop on mobile nav

--- a/common.css
+++ b/common.css
@@ -229,7 +229,7 @@ ol {
   position: absolute;
   left: 0;
   right: 0;
-  top: 150px;
+  top: 196px;
   height: 100vh;
   background: rgba(0, 0, 0, 0.5);
   z-index: 1;
